# MatheoCrawler

./: .gitignore  ActionSelectionUI.cpp  ActionSelectionUI.h  AnimationHolder.cpp  AnimationHolder.h  AnimationIdentifiers.h  AnimationSystem.cpp  AnimationSystem.h  AssetManager.h  AttackData.h  AttackSystem.cpp  AttackSystem.h  AttackTask.h  BarRenderSystem.cpp  BarRenderSystem.h  BasicMeleeBehavior.cpp  BasicMeleeBehavior.h  BasicRangedBehavior.cpp  BasicRangedBehavior.h  BehaviorAIUpdateSystem.cpp  BehaviorAIUpdateSystem.h  BehaviorContext.h  BladeArtsShopCategory.cpp  BladeArtsShopCategory.h  CMakeLists.txt  CameraSystem.h  ChaseAISystem.cpp  ChaseAISystem.h  ChaseTask.cpp  ChaseTask.h  CollisionSystem.cpp  CollisionSystem.h  Components.h  ConceptDefinitions.h  Config.cpp  Config.h  DelayTask.cpp  DungeonGenerator.cpp  DungeonGenerator.h  EffectSystem.cpp  (+132 more)
assets/config/: configuration.matt
assets/entities/: genericAnimations.txt
assets/entities/Bonvik/: animations.txt  character.json  sheet-credits.txt
assets/entities/Moranna/: animations.txt  character.json  sheet-credits.txt
assets/entities/player/: animations.txt  character.json  sheet-credits.txt
assets/entities/ray/: animations.txt  (+2 more)
include/: AOEUpgradeStrategy.h  AboutState.h  ActionSelectionUI.h  AnimationFrame.h  AnimationHolder.h  AnimationIdentifiers.h  AreaOfEffectSpellSystem.h  BasicMeleeBehavior.h  BasicRangedBehavior.h  BattleAndMagicSection.h  BeamData.h  BeamSpell.h  BeamSystem.h  BladeDanceSpell.h  CastSpellTask.h  CaveGenerator.h  CollisionSystem.h  Components.h  ConceptDefinitions.h  CreditsState.h  DelayTask.h  Directions.h  DungeonFoesSection.h  DungeonGenerator.h  Engine.h  Entity.h  EntityDataRepository.h  EntityDeathSystem.h  EntityFactory.h  EntityManager.h  EntitySpawnerSystem.h  EntityTypes.h  EventManager.h  FileHandler.h  FontIdentifiers.h  FrostPillarSpell.h  GameEvents.h  GameOverUI.h  GameOverviewSection.h  GameState.h  (+54 more)
src/: AOEUpgradeStrategy.cpp  AboutState.cpp  ActionSelectionUI.cpp  AnimationHolder.cpp  AreaOfEffectSpellSystem.cpp  AttackSystem.cpp  AttackTask.cpp  BarRenderSystem.cpp  BasicMeleeBehavior.cpp  BasicRangedBehavior.cpp  BattleAndMagicSection.cpp  BeamSpell.cpp  BeamSystem.cpp  BehaviorAIUpdateSystem.cpp  BladeArtsShopCategory.cpp  BladeDanceSpell.cpp  CameraSystem.cpp  CastSpellTask.cpp  CaveGenerator.cpp  ChaseAISystem.cpp  CollisionSystem.cpp  CreditsState.cpp  DungeonFoesSection.cpp  DungeonGenerator.cpp  EffectSystem.cpp  Engine.cpp  Entity.cpp  EntityDataRepository.cpp  EntityDeathSystem.cpp  EntityFactory.cpp  EntityRenderSystem.cpp  EntitySpawnerSystem.cpp  EventManager.cpp  FrostPillarSpell.cpp  GameOverUI.cpp  GameOverviewSection.cpp  GameState.cpp  GameStatisticsSystem.cpp  HealSpellSystem.cpp  HealingSpellUpgradeStrategy.cpp  (+49 more)
(+5 files in other folders)
